welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:2: error: identifier expected but '(' found.
def ( dog() ) {
    ^