welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def ( dog() ) {
	baisseBrosse();
	avance();
	avance();
	gauche();
	avance(); 
	avance();
	gauche();
	avance(); 
	avance();
	gauche()
	avance(); 
	avance();
	leveBrosse();
}
for (tour <-1 to 4){
	dog();
}
